                                                     -*- coding: utf-8 -*-
Changes for APR 2.0.0

  *) testmmap: Avoid a crash after test_file_open() fails. [Graham
     Leggett]

  *) apr_proc_mutex_timedlock() should return APR_TIMEUP on systems
     where semtimedop() returns ETIMEDOUT rather than
     EAGAIN. Likely AIX-only. [Eric Covener]

  *) apr_ldap: Add the new APR LDAP API. [Graham Leggett]

  *) Add APR_OFF_MAX to give the maximum value of apr_off_t. [Graham
     Leggett]

  *) Pass details of module loading errors back to the caller through the
     apu_err_t structure. [Graham Leggett]

  *) apr_buffer: Add the apr_buffer API. [Graham Leggett]

  *) apr_escape: Add apr_escape_json() and apr_pescape_json().
     [Graham Leggett]

  *) dbm: Add LMDB driver. [Lubos Uhliarik <luhliari redhat.com>]

  *) apr_memcache: Check sockets from connection pool before using them and try
     to reconnect them if they are not usable any longer.[Ruediger Pluem]

  *) New APR_THREAD_LOCAL and apr_thread_current*() API.  [Yann Ylavic]

  *) apr_crypto_openssl: Compatibility with OpenSSL 3.  [Yann Ylavic]

  *) apr-1-config: Fix crosscompiling detection in apr-1-config. PR 66510
     [Ruediger Pluem]

  *) configure: Add --enable-sysv-shm to use SysV shared memory (shmget) if
     available. [Ruediger Pluem]

  *) configure: Prefer posix name-based shared memory over SysV IPC.
     [Jim Jagielski]

  *) configure: Add --disable-sctp argument to forcibly disable SCTP
     support, or --enable-sctp which fails if SCTP support is not
     detected.  [Lubos Uhliarik <luhliari redhat.com>, Joe Orton]

  *) apr_dbm: Add dedicated apr_dbm_get_driver() function that returns
     details of the driver selected and any error encountered. Add the
     apr_dbm_open2() function that references the driver. [Graham Leggett]

  *) apr_mmap_t members pstart, psize and poffset are used internally only
     on Windows, remove them.  [Yann Yalvic]
